[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dall_e"
version = "0.0.1"
authors = [
  { name="Stefan Boos", email="kontakt@boos.systems" },
]
description = "Experiment with Image Generation - DALL-E"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wonderbird/experiment-with-image-generation-dall-e"
"Bug Tracker" = "https://github.com/wonderbird/experiment-with-image-generation-dall-e/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.wheel]  
packages = ["src/dall_e"]
